--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="cropped-blockchain-favicon-1.jpg">
-    <title>Crypto Market</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Crypro Market</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,11 +25,11 @@
 
         <div id="buttons-navbar-container">
             <div id="buttons-container">
-                <button type="button" class="btn btn-outline-dark navbar-button">Coins</button>
-                <button type="button" class="btn btn-outline-dark navbar-button">Live Reports</button>
-                <button type="button" class="btn btn-outline-dark navbar-button">About</button>
+                <button id="coins-button" type="button" class="btn btn-outline-dark navbar-button">Coins</button>
+                <button id="live-reports-button" type="button" class="btn btn-outline-dark navbar-button">Live Reports</button>
+                <button id="about-button" type="button" class="btn btn-outline-dark navbar-button">About</button>
                 <input id="search-input" class="form-control me-2 navbar-button navbar-buttons" type="search" placeholder="&#x1F50E;  Search" aria-label="Search">
-                <button type="button" class="btn btn-outline-dark navbar-button">Search</button>
+                <button id="search-button" type="button" class="btn btn-outline-dark navbar-button">Search</button>
 
             </div>
         </div>
@@ -33,7 +38,7 @@
     <div class="container">
         <div class=" row row-cols-1 row-cols-sm-2 row-cols-md-4" id="main-container">
             <!-- <div class="col">
-                <div id="coin-card" class="card border-light mb-3" style="max-width: 15rem;">
+                <div id="7" class="card border-light mb-3 coin-card" style="max-width: 15rem;">
                     <div class="card-header">Symbol</div>
                     <div class="card-body">
                         <h5 class="card-title">Name</h5>
@@ -41,14 +46,28 @@
                             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         </div>
                         <br>
-                        <button type="button" class="btn btn-secondary">More Info</button>
+                        <button type="button" class="btn btn-outline-primary more-info-button">More Info</button>
                     </div>
                 </div>
             </div> -->
         </div>
     </div>
+
+    <div id="about-container">
+        <h1>Dor Amiel</h1>
+        <h5>Full Stack Student</h5>
+        <hr>
+        <p>Welcome to Crypto Market!<br>The following website contains information <br> about crypto currencies all around the globe.<br> Browse to get information about the coins,<br> get live reports on your top 5 currencies<br> Enjoy!
+        </p>
+    </div>
+
+    <div id="live-reports-container">
+        <h1>We Are Working On It....</h1>
+    </div>
+
+
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script src="index.js"></script>
 
 </html>
