--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <input id="search-input" class="form-control me-2 navbar-button navbar-buttons" type="search" placeholder="&#x1F50E;  Search" aria-label="Search">
                 <button id="search-button" type="button" class="btn btn-outline-dark navbar-button">Search</button>
 
+
             </div>
         </div>
     </div>
@@ -79,7 +80,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary modal-close-button" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary modal-close-button" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
