--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
 </head>
 
 <body>
-    <div id="header">
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">
+            <img src="cropped-blockchain-favicon-1.jpg" width="30" height="30" class="d-inline-block align-top" alt=""> Crypto Market
+        </a>
+        <div id="buttons-container">
+            <button id="coins-button" type="button" class="btn btn-outline-dark navbar-button">Coins</button>
+            <button id="live-reports-button" type="button" class="btn btn-outline-dark navbar-button">Live Reports</button>
+            <button id="about-button" type="button" class="btn btn-outline-dark navbar-button">About</button>
+        </div>
+        <div id="search-container">
+            <input id="search-input" class="form-control me-2 navbar-button navbar-buttons" type="search" placeholder="&#x1F50E;  Search" aria-label="Search">
+            <button id="search-button" type="button" class="btn btn-outline-dark navbar-button">Search</button>
+        </div>
+    </nav>
+    <!-- <div id="header">
         <nav id="navbar-container" class="navbar navbar-dark bg-dark">
             <div class="container-fluid" id="header-navbar-container">
                 <a id="crypto-place-header" class="navbar-brand" href="#">
@@ -33,7 +47,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
     <br>
     <div class="container">
         <div class=" row row-cols-1 row-cols-sm-2 row-cols-md-4" id="main-container">
